samples/_failures_safe/1761204719_48e9de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ead440a.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_9ead440a.c:162:9: error: expected declaration or statement at end of input
  162 |         case TOKEN_STRING: return "STRING";
      |         ^~~~
./samples/SAFE/__tmp_9ead440a.c:162:9: error: expected declaration or statement at end of input
